2020-06-21 Luigi Scarso <luigi.scarso@gmail.com>
    * pending better is_defined check plus an extra option in a scanner; also the \cs case. (HH)
    * tex.getmark(what,wherefrom)  added (HH)

2020-05-01 Luigi Scarso <luigi.scarso@gmail.com>
    * added tex.interlinepenalties tex.clubpenalties tex.widowpenalties 
    tex.displaywidowpenalties to complement tex.parshape (HH)

2020-04-28 Luigi Scarso <luigi.scarso@gmail.com>
    * less strict lastnode testing (HH) 
    * some experimental math delimiter code removed (HH)

2020-04-27 Luigi Scarso <luigi.scarso@gmail.com>
    * similar treatment for shiftdown as shiftup in operators (no
     checking) (HH)

2020-04-07 Luigi Scarso <luigi.scarso@gmail.com>
    * Version 1.13.0. 
      getstring extra argument to pdfe.getstring (triggers unencoded or flag
      return values) (HH).

2020-03-09 Luigi Scarso <luigi.scarso@gmail.com>
    * texluahb / texluahbjit for luahbtex / luajithbtex

2020-03-09 Luigi Scarso <luigi.scarso@gmail.com>
    * --shell-restricted now forbids loading of dso (dll/so object)

2020-03-09 Luigi Scarso <luigi.scarso@gmail.com>
    * append_vlist : node|nil [prevdepth] (fix + extension/warning) (HH)

2020-03-01 Luigi Scarso <luigi.scarso@gmail.com>
    * fixed lua stack overflow in run_put_next (M. Kruger)

2020-02-29 Luigi Scarso <luigi.scarso@gmail.com>
    * luahbtex: add (single codepoint) "add" method to buffer (M.Kruger)

2020-03-06  Karl Berry  <karl@tug.org>

    * am/luatex.am (texlua[jit][c]) [LUA[JIT]HBTEX && !LUA[JIT]TEX]:
    keep these as links to base lua[jit]tex, not overwriting
    with links to luahb[jit]tex, unless the base luatex is not installed.
    https://tug.org/pipermail/tex-live/2020-March/044948.html
    (and preceding)

2020-02-12  Luigi Scarso <luigi.scarso@gmail.com>
    * restore state for \input delimited with {}

2020-02-11  Luigi Scarso <luigi.scarso@gmail.com>
    * patches for -fno-common (thanks to D. Seifert of Gentoo team)

