@@ -608,6 +608,10 @@ in addition to the regular \type {io} library functions.
 \NC \type{readbytetable(f,n)}       \NC \type {n} bytes\NC \NR
 \stoptabulate
 
+There are eight additional little endian variants for the \type {cardinal[1-4]}
+and \type {integer[1-4]} readers: \type {cardinal[1-4]le} and \type
+{integer[1-4]le}.
+
 \stopsubsection
 
 \startsubsection[title={Binary input from strings with \type {sio}}]
